--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,8 +1,11 @@
 .navbar {
     display: flex;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 30px;
+    padding: 5px 30px;
     background-color: #333;
     color: white;
     font-family: 'Poppins', sans-serif;
@@ -29,8 +32,10 @@
     display: flex;
     gap: 20px;
   }
-  
-  .nav-link {
+ li {
+  list-style: none;
+ }
+  .nav-link, .navbar-links > li >a {
     color: white;
     text-decoration: none;
     font-size: 18px;
@@ -38,5 +43,12 @@
   
   .nav-link:hover {
     text-decoration: underline;
+  }
+  
+  
+  
+  .navbar-links a.active {
+    font-weight: bold;
+    color: #007bff; /* Active link color */
   }
   
